# cpp_conan_gtest_sept2022

./: .gitignore  CMakeLists.txt  br.bash  build.xsh  build_and_run_boids_and_clang_tidy.bash  build_and_run_tests.bash  build_debug.bash  clean_build_dir.bash  commands.md  notes.md  rr.bash  run_tests.bash
YOUR_PROJECT_NAME/: CMakeLists.txt  conanfile.txt  helpers.cpp  helpers.hpp
test/: CMakeLists.txt  CTestConfig.cmake  conanfile.txt  example.test.cpp
